--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["dbp"]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^5.0.6"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.dev-dependencies]
 
